--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="">Главная</a>
             <a href="">Доставка</a>
             <a href="">О нас</a>
-            <a href="">Новости</a>
+            <a href="./news.html">Новости</a>
           </div>
           <div class="header-number">
             <img src="./img/zvon.svg" alt="" />
